Alignment of highlights items was fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1374,7 +1374,7 @@ SCSS and BEM structure were used on this project
 .hightlights__list {
   display: flex;
   flex-flow: row;
-  justify-content: space-around;
+  justify-content: space-between;
   font-size: 14px;
   color: #ffffff;
   width: 100%;
