--- a/scss/components/_content.scss
+++ b/scss/components/_content.scss
@@ -695,7 +695,7 @@
     &__list {
         display: flex;
         flex-flow: row;
-        justify-content: space-around;
+        justify-content: space-between;
         font-size: 14px;
         color: #ffffff;
         width: 100%;
